--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,16 @@
             "email": "geloen.eric@gmail.com"
         }
     ],
+    "repositories": [
+        {
+            "type":"vcs",
+            "url": "https://github.com/Kevinowsky/egeloen-google-map.git"
+        }
+    ],
     "require": {
         "php": ">=5.3.0",
         "symfony/framework-bundle": "~2.1",
-        "egeloen/google-map": "~1.4.0"
+        "kevinowsky/egeloen-google-ma": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
